Add OpenAPI endpoint for downloading/playing files by `song_id`
