# backend/src/Controller/Api/Stations/Files/PlayAction.php
@@ -37,6 +37,30 @@ use Psr\Http\Message\ResponseInterface;
         ]
     )
 ]
+#[
+    OA\Get(
+        path: '/station/{station_id}/file/{song_id}/play',
+        operationId: 'getPlayFileSongId',
+        summary: 'Download or play a given file by song_id.',
+        tags: [OpenApi::TAG_STATIONS_MEDIA],
+        parameters: [
+            new OA\Parameter(ref: OpenApi::REF_STATION_ID_REQUIRED),
+            new OA\Parameter(
+                name: 'song_id',
+                description: 'Media ID',
+                in: 'path',
+                required: true,
+                schema: new OA\Schema(type: 'string', format: 'guid')
+            ),
+        ],
+        responses: [
+            new OpenApi\Response\SuccessWithDownload(),
+            new OpenApi\Response\AccessDenied(),
+            new OpenApi\Response\NotFound(),
+            new OpenApi\Response\GenericError(),
+        ]
+    )
+]
 final class PlayAction implements SingleActionInterface
 {
     public function __construct(
